# trident-investigation-agent

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
docs/: 01 ARCHITECTURE.md  02 CONTEXT_ENGINEERING.md  04 DEMO_EXPLANATION.md  05 INVESTIGATION_PIPELINE.md  06 01 Underwriting_Intelligence.md  06 02 Claims_Intelligence.md  06 03 Fraud_Intelligence.md  06 04 Provider_Risk_Management.md  06 05 Portfolio_Monitoring.md  06 06 Recovery_Subrogation.md  06 07 Case_Management.md  06 08 Graph_Intelligence_Platform.md  06 10 Anaira_Architecture.md  06 10 Governance_Compliance.md  06 Anaira.md  ARCHITECTURE.md  Anaira_State_Machine.md  Claims_Intelligence.md  DEMO_EXPLANATION.md  DEMO_WALKTHROUGH.md  Fraud_Intelligence.md  Governance_Compliance.md  Graph_Intelligence_Platform.md  Portfolio_Monitoring.md  Provider_Risk_Management.md  Recovery_Subrogation.md  Underwriting_Intelligence.md
investigation_agent/: detector.py  graph_builder.py  investigator.py  orchestrator.py  reporter.py
investigation_agent/synthetic/: generator.py
src/investigation_agent/: __init__.py  __main__.py  detector.py  graph_builder.py  investigator.py  models.py  orchestrator.py  reporter.py
src/investigation_agent/synthetic/: generator.py
src/trident_engine/: __init__.py
src/trident_engine/context/: __init__.py  assembler.py  budgets.py  compressor.py  entropy.py  planes.py  provenance.py  signals.py
src/trident_engine/fsm/: __init__.py  engine.py  state_store.py  transitions.py
tests/: test_agent.py  test_context.py  test_fsm.py  test_lineage.py  test_reliability.py
(+21 files in other folders)
